Fix null-handling regressions and add full java.time converter support
Widen Instant/LocalDate/LocalDateTime/LocalTime/OffsetDateTime/ZonedDateTime
binding to dedicated, dialect-verified converters; fix List.of() null
intolerance in update().set() and several conditions; add property-based
round-trip tests for all converters. Bump version to 0.2.0.