@@ -1,5 +1,6 @@
 package io.github.happyduke96.squell.condition;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 
@@ -23,6 +24,6 @@ public final class ILike implements Condition {
 
     @Override
     public List<Object> values() {
-        return List.of(pattern.toLowerCase(Locale.ROOT));
+        return Collections.singletonList(pattern == null ? null : pattern.toLowerCase(Locale.ROOT));
     }
 }
